<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <CheckBox
        android:id="@+id/checkBoxFour"
        android:layout_width="135dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="250dp"
        android:text="@string/check_four"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxThree" />

    <TextView
        android:id="@+id/info"
        android:layout_width="191dp"
        android:layout_height="25dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/when_the_button_is_clicked"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/description"
        android:layout_width="366dp"
        android:layout_height="82dp"
        android:layout_marginTop="25dp"
        android:text="@string/description_text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="310dp"
        android:layout_height="47dp"
        android:layout_marginTop="50dp"
        android:background="@color/buttonBackground"
        android:text="@string/display_selected_checkbox_values"
        android:textColor="@color/buttonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxFour" />

    <CheckBox
        android:id="@+id/checkBoxOne"
        android:layout_width="135dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="250dp"
        android:text="@string/check_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <CheckBox
        android:id="@+id/checkBoxTwo"
        android:layout_width="135dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="250dp"
        android:text="@string/check_two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxOne" />

    <CheckBox
        android:id="@+id/checkBoxThree"
        android:layout_width="135dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="250dp"
        android:text="@string/check_three"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxTwo" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="51dp"
        android:layout_height="66dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info"
        app:srcCompat="@drawable/download"
        android:contentDescription="@string/arrow" />

    <TextView
        android:id="@+id/result"
        android:layout_width="280dp"
        android:layout_height="74dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

</androidx.constraintlayout.widget.ConstraintLayout>